# me2png

./: .gitignore  CMakeLists.txt  LICENSE  README.md  me2png.desktop
scripts/: pack-linux.sh  pack-win.sh
src/: Avatar.cpp  Config.cpp  ImagePicker.cpp  Main.cpp  Microphone.cpp  Utils.cpp
src/headers/: Avatar.hpp  Config.hpp  ImagePicker.hpp  Microphone.hpp  Utils.hpp
